# rcc-compiler

./: .gitignore  BUILDING.md  CMakeLists.txt  CONTRIBUTING.md  COPYRIGHT.md  LICENSE  LINKING_GUIDE.md  README.md  SAFETY.md  package_bin.ps1
cmake/: increment_build.cmake
libc/: complex.h  ctype.h  errno.h  fenv.h  limits.h  locale.h  process.h  stdarg.h  stdatomic.h  stdbit.h  stdckdint.h  stdint.h  stdio.h  stdnoreturn.h  threads.h  time.h  wchar.h  wctype.h
src/: ast.h  auto_free_pass.cpp  auto_free_pass.h  auto_memory.cpp  auto_memory.h  borrow_checker.cpp  borrow_checker.h  codegen.cpp  codegen.h  cpp.cpp  cpp.h  lexer.cpp  lexer.h  main.cpp  ownership.cpp  ownership.h  parser.cpp  parser.h  peephole.cpp  peephole.h  regalloc.cpp  regalloc.h  safety.h  synout0.cpp  tokens.h  type_enrichment.cpp  type_enrichment.h  version.h
tests/: run_tests.ps1
tests/unit/: test_auto_free_basic.c  test_auto_memory.c  test_binary_literals.c  test_bitfields.c  test_bitops.c  test_borrow_advanced.c  test_borrow_write_ok.c  test_c11_comprehensive.c  test_c11_declarations.c  test_c11_fenv.c  test_c11_generics.c  test_c11_inttypes.c  test_c11_math.c  test_c11_phase1.c  test_c11_phase2.c  test_c11_phase3.c  test_c11_phase4.c  test_c11_stdtypes.c  test_c11_string_lib.c  test_c17_version.c  test_c23_bitint.c  test_c23_complete.c  test_c23_complete2.c  test_c23_cpp.c  test_c23_final.c  test_c23_final2.c  test_c23_grammar.c  test_c23_has_embed.c  test_c23_lib.c  test_c23_lib2.c  test_c23_noreturn_warn.c  test_c23_phase1.c  test_c23_phase1_complete.c  test_c23_simple.c  test_c23_stdbit.c  test_c23_stdckdint.c  test_char8_t.c  test_comma_op.c  test_comprehensive_memory.c  test_const_prop_inc.c  (+62 more)
